Fix wrapping of UI elements

--- a/web/css/src/styles.css
+++ b/web/css/src/styles.css
@@ -639,6 +639,7 @@ a {
 .l-center {
   margin: 0 auto;
   max-width: 1020px;
+  min-width: 1020px;
 }
 
 .l-logo {
